fix(style): index spacing

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -177,7 +177,3 @@ body {
   max-width: 100vw;
   overflow-x: hidden;
 }
-body {
-  margin: 0;
-  font-family: Roboto, "Helvetica Neue", sans-serif;
-}
